# CPP

./: .gitignore  CMakeLists.txt  ClasesAbstractas.cpp  ColeccionEnteros.cpp  ColeccionVector.cpp  HerenciaPoliAnimales.cpp  Inventario.cpp  Inventario_IA_solution.cpp  Notificacion(IA_payload).cpp  Notificacion(IA_solution2).cpp  Notificacion.cpp  Notificacion_IA_solution1.cpp  README.md  main01.cpp  main02.cpp  multithreading_example.cpp  multithreading_example_detach.cpp  multithreading_example_sharedVector.cpp  shared_ptr_example.cpp
NCurses/: 10-SimpleKeyUsageExample.cpp  11-SimpleKeyMouseUsageExample.cpp  13-ACSVariablesExample.cpp  4-SimpleScanwExample.cpp  6-ChgatUsageExample.cpp  7-WindowBorderExample.cpp  8-WindowBorderExample2.cpp  CMakeLists.txt  NCursesExamples.cpp  NCursesMain.cpp  README.md
PDCurses/: 11-SimpleKeyMouseUsageExample.cpp  12-TemporarilyLeavingCursesModeExample.cpp  3-SimplePrintwExample.cpp  5-SimpleAttributesExample.cpp  9-ColorsExample.cpp  CMakeLists.txt  README.md
